--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,12 +1,12 @@
 .features {
   display: flex;
   justify-content: center;
-}
-.features h2 {
+ 
+ h2 {
   margin-top: 0px;
-  margin-right: 0px;
-}
-.features h3 {
+  margin-right: 0px;}
+
+ h3 {
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -15,9 +15,9 @@
   text-transform: uppercase;
 
   margin-top: 0px;
-  margin-bottom: 0px;
-}
-.features p {
+  margin-bottom: 0px;}
+
+ p {
   color: var(--title-text-color);
   font-weight: normal;
   font-size: 14px;
@@ -27,7 +27,7 @@
   padding-top: 10px;
   margin-bottom: 0px;
   margin-right: 0px;
-}
+}}
 ul .features {
   padding: 0px;
   margin-top: 0;
