--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,33 +1,36 @@
 .features {
   display: flex;
   justify-content: center;
- 
- h2 {
-  margin-top: 0px;
-  margin-right: 0px;}
 
- h3 {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  font-family: Roboto;
-  text-transform: uppercase;
+  h2 {
+    margin-top: 0px;
+    margin-right: 0px;
+  }
 
-  margin-top: 0px;
-  margin-bottom: 0px;}
+  h3 {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    font-family: Roboto;
+    text-transform: uppercase;
 
- p {
-  color: var(--title-text-color);
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
 
-  padding-top: 10px;
-  margin-bottom: 0px;
-  margin-right: 0px;
-}}
+  p {
+    color: var(--title-text-color);
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+
+    padding-top: 10px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+  }
+}
 ul .features {
   padding: 0px;
   margin-top: 0;
