--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -22,11 +22,11 @@
   font-size: 26px;
   line-height: 1.19;
   padding-top: 24px;
+  span {
+    color: var(--accent-color);
+  }
 }
 
-.logo span {
-  color: var(--accent-color);
-}
 .footer-logo {
   text-decoration: none;
   color: #ffffff;
@@ -35,15 +35,11 @@
   font-family: Raleway, sans-serif;
 
   display: inline-block;
-}
-.footer-logo span {
-  color: var(--accent-color);
+  span {
+    color: var(--accent-color);
+  }
 }
 
-.link:hover,
-.link:focus {
-  color: var(--accent-color);
-}
 .link {
   text-decoration: none;
   color: var(--primary-text-color);
@@ -58,34 +54,47 @@
   position: relative;
   transition-duration: 250ms;
   transition-timing-function: var(--timing-function);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
+
 li {
   list-style-type: none;
 }
-.nav-contacs a {
-  text-decoration: none;
-  color: var(--title-text-color);
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
+
 .nav-contacs {
   display: flex;
   margin-top: 0px;
   margin-bottom: 0px;
   min-width: 360px;
   padding: 0px;
+
+  a {
+    text-decoration: none;
+    color: var(--title-text-color);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  }
 }
 
 .container-nav {
   padding-left: 329px;
   padding-top: 32px;
   padding-bottom: 32px;
-}
 
-.nav-contacs :not(:first-child) {
-  margin-left: 50px;
+  & :not(:first-child) {
+    margin-left: 50px;
+  }
 }
 
 .menu-nav {
@@ -94,14 +103,10 @@ li {
   padding-top: 32px;
   padding-bottom: 32px;
   padding-left: 93px;
-}
 
-.menu-nav :not(:first-child) {
-  margin-left: 50px;
-}
-.nav-contacs a:hover,
-.nav-contacs a:focus {
-  color: var(--accent-color);
+  & :not(:first-child) {
+    margin-left: 50px;
+  }
 }
 
 h1,
