--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,21 +1,17 @@
-.hero a {
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-}
-.btn .button {
-  display: inline-block;
-  min-width: 200px;
-  padding: 10px 32px;
-  text-decoration: none;
-  border-radius: 4px;
-  background-color: var(--accent-color);
-  color: #ffffff;
-}
 .btn {
   padding-bottom: 200;
+
+  .button {
+    display: inline-block;
+    min-width: 200px;
+    padding: 10px 32px;
+    text-decoration: none;
+    border-radius: 4px;
+    background-color: var(--accent-color);
+    color: #ffffff;
+  }
 }
+
 .hero {
   max-width: 1600px;
   text-align: center;
@@ -32,6 +28,13 @@
 
   margin-top: 0px;
   margin: auto;
+
+  a {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+  }
 }
 
 .title-hero {
