--- a/sass/layout/_menu-portfolio.scss
+++ b/sass/layout/_menu-portfolio.scss
@@ -7,6 +7,13 @@
 
   margin-left: auto;
   margin-right: auto;
+
+  ul {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
 }
 .our-work {
   font-size: 36px;
@@ -15,21 +22,23 @@
 }
 .container-item {
   padding: 20px 24px;
+
+  h2 {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--primary-text-color);
+  }
+  p {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+  }
 }
-.container-item h2 {
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: var(--primary-text-color);
-}
-.container-item p {
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.03em;
-  color: var(--title-text-color);
-}
+
 .link-current {
   font-style: normal;
   font-weight: 500;
@@ -58,21 +67,24 @@
 .portfolio-menu {
   display: flex;
   flex-wrap: wrap;
+
+  li {
+    border: 1px solid #eeeeee;
+    box-sizing: border-box;
+  }
 }
-.portfolio-menu li {
-  border: 1px solid #eeeeee;
-  box-sizing: border-box;
-}
+
 .portfolio-menu .item {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-}
-.portfolio-menu .item:nth-child(3n) {
-  margin-right: 0px;
-}
-.portfolio-menu .item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+
+  &:nth-child(3n) {
+    margin-right: 0px;
+  }
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 
 .item h2 {
@@ -92,12 +104,6 @@ button:focus {
   border-color: transparent;
 }
 
-.menu ul {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-}
 .menu-container {
   width: 1200px;
 }
@@ -105,9 +111,10 @@ button:focus {
 .list-menu {
   display: flex;
   justify-content: center;
-}
-.list-menu li:not(:last-child) {
-  margin-right: 8px;
+
+  li:not(:last-child) {
+    margin-right: 8px;
+  }
 }
 
 .portfolio-container {
@@ -116,14 +123,19 @@ button:focus {
 .portfolio-item-link {
   display: inline-block;
   text-decoration: none;
-}
-.portfolio-item-link:hover,
-.portfolio-item-link:focus {
-  background: #ffffff;
-  border: 1px solid #eeeeee;
-  box-sizing: border-box;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+
+  &:hover,
+  &:focus {
+    background: #ffffff;
+    border: 1px solid #eeeeee;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  .portfolio-item-link:hover .overlay-text {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .overlay-text {
@@ -135,23 +147,19 @@ button:focus {
   opacity: 0;
   transform: translatey(100%);
   transition: transform 250ms var(--timing-function);
+
+  p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.55;
+    letter-spacing: 0.03em;
+
+    padding: 63px 24px;
+    color: #ffffff;
+  }
 }
 
 .overlay {
   position: relative;
   overflow: hidden;
-}
-
-.overlay-text p {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.55;
-  letter-spacing: 0.03em;
-
-  padding: 63px 24px;
-  color: #ffffff;
-}
-.portfolio-item-link:hover .overlay-text {
-  opacity: 1;
-  transform: translateY(0);
 }
