--- a/sass/layout/_ouer-team.scss
+++ b/sass/layout/_ouer-team.scss
@@ -1,33 +1,3 @@
-.team-title {
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
-  text-align: center;
-
-  margin: 0px;
-}
-.team-list p {
-  color: var(--title-text-color);
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.18;
-  letter-spacing: 0.03em;
-
-  padding-top: 10px;
-  margin: 0px;
-}
-.team-list h3 {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
-
-  padding-top: 30px;
-  margin: 0px;
-}
-.team-list > li:not(:last-child) {
-  margin-right: 30px;
-}
 .team-section {
   text-align: center;
   background-color: #f5f4fa;
@@ -41,6 +11,16 @@
   margin-left: auto;
   margin-right: auto;
 }
+.team-title {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  text-align: center;
+
+  margin: 0px;
+}
+
 .team-list {
   display: flex;
   align-items: center;
@@ -48,12 +28,37 @@
 
   padding-left: 0px;
   padding-top: 50px;
+
+  p {
+    color: var(--title-text-color);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
+
+    padding-top: 10px;
+    margin: 0px;
+  }
+
+  h3 {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.18;
+
+    padding-top: 30px;
+    margin: 0px;
+  }
 }
+
 .team-list > li {
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 .social-list {
   display: flex;
@@ -74,14 +79,15 @@
 
   transition-duration: 250ms;
   transition-timing-function: var(--timing-function);
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    color: #ffffff;
+  }
 }
 .social-icon {
   fill: currentColor;
   width: 20px;
   height: 20px;
-}
-.socila-link-icon:hover,
-.socila-link-icon:focus {
-  background-color: var(--accent-color);
-  color: #ffffff;
 }
