--- a/sass/layout/_menu-portfolio.scss
+++ b/sass/layout/_menu-portfolio.scss
@@ -1,12 +1,6 @@
 .menu {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
   padding-bottom: 94px;
   padding-top: 94px;
-
-  margin-left: auto;
-  margin-right: auto;
 
   ul {
     margin-top: 0px;
@@ -132,10 +126,6 @@ button:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-  .portfolio-item-link:hover .overlay-text {
-    opacity: 1;
-    transform: translateY(0);
-  }
 }
 
 .overlay-text {
@@ -147,6 +137,11 @@ button:focus {
   opacity: 0;
   transform: translatey(100%);
   transition: transform 250ms var(--timing-function);
+
+  .portfolio-item-link:hover & {
+    opacity: 1;
+    transform: translateY(0);
+  }
 
   p {
     font-size: 18px;
